# egokit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  SYSTEM_ARCHITECTURE.md  USER_GUIDE.md  VERSIONING.md  install-egokit.sh  pyproject.toml
.augment/rules/: coding-style.md  policy-rules.md
.claude/: 0-CRITICAL-POLICIES.md  PRE-COMMIT-CHECKLIST.md  settings.json
.claude/commands/: before-code.md  checkpoint.md  compliance-check.md  mode-implementer.md  mode-reviewer.md  mode-security.md  recall-policies.md  refresh-policies.md  security-review.md  validate.md
.claude/system-prompt-fragments/: egokit-policies.txt
docs/: claude-slash-commands.md  index.html  one-pager.md
mintlify/: architecture.mdx  changelog.mdx  introduction.mdx  mint.json  quickstart.mdx  user-guide.mdx
src/egokit/: __init__.py  cli.py  compiler.py  exceptions.py  models.py  registry.py  validator.py
src/egokit/detectors/: __init__.py  base.py  loader.py
src/egokit/detectors/builtin/: __init__.py  secret.regex.v1.py
src/egokit/imprint/: __init__.py  detector.py  models.py  parsers.py  suggester.py
tests/: __init__.py  test_cli.py  test_compiler.py  test_imprint.py  test_integration.py  test_models.py  test_registry.py
